2005-11-05  Kornél Pál  <kornelpal@hotmail.com>

	* AssemblyInfo.cs: Use Consts.MonoVersion as AssemblyVersion.

2005-09-22  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Main.cs: Changed binPath to directory where all files are stored.
	* Makefile: Added installing of additional files.

2005-09-21  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* LoggerInfo.cs: Changed public to internal.
	* xbuild.exe.sources: Added reference to AssemblyLoadInfo.

2005-09-21  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Microsoft.Common.tasks, xbuild.rsp, Microsoft.Build.xsd, MSBuild:
	Moved to xbuild/.
	* Main.cs, Pararameters.cs: Changed to use Mono.XBuild.Framework and
	Mono.XBuild.Utilities.
	* CommandLineException.cs, LoggerInfo.cs: Added #if NET_2_0
	

2005-09-11  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* xbuild.exe.sources: Added Consts.cs from common build files.
	* LoggerInfo.cs: Public key token update.
	* Parameters.cs, Main.cs: Changed to use BinPath instead of hard-coded path.
	* Makefile: Added installing of xbuild's files.
	* Microsoft.Common.tasks: Moved from main directory and changed to use
	assemblies from GAC.

2005-09-09  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Main.cs: FxVersion.
	* Makefile: Fixed Microsoft.Build.Utilities.dll name.

2005-09-05  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Microsoft.Build.xsd, MSBuild/Microsoft.Build.Core.xsd,
	Microsoft.Build.Commontypes.xsd: Added schema files.

2005-08-30  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Main.cs, Parameters.cs: Added default target(s) handling.

2005-08-29  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* LoggerInfo.cs: Removed AssemblyLoadInfo property, changed to inherit
	AssemblyLoadInfo.
	* XBuild.targets: Updated.
	* Parameters.cs: Removed debugging info and removed line producing
	errors.
	* Main.cs: Added check if engine is null.

2005-08-24  Marek Sieradzki  <marek.sieradzki@gmail.com>
